--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -274,7 +274,7 @@
                                             <i class="mdi mdi-tag-text-outline"></i>
                                         </div>
                                         <div class="p-4">
-                                            <h6 class="text-uppercase mb-3">Disposisi</h6>
+                                            <h6 class="text-uppercase mb-3">Data Divisi</h6>
                                             <h4 class="mb-0">9<small class="ml-2"></small></h4>
                                         </div>
                                     </div>
