--- a/admin/laporan.html
+++ b/admin/laporan.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Arsipin - Surat Masuk</title>
+    <title>Arsipin - Laporan</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="themesdesign" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -102,7 +102,7 @@
 
                         <li>
                                 <a href="laporan.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-library-books"></i><span> Laporan Disposisi </span></a>
+                                    class="mdi mdi-library-books"></i><span>Laporan Disposisi</span></a>
                             </li>
 
         </ul>
@@ -257,7 +257,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="page-title-box">
-                                    <h4 class="page-title">Surat Masuk</h4>
+                                    <h4 class="page-title">Laporan</h4>
                                 </div>
                             </div>
                         </div>
@@ -267,7 +267,7 @@
                                     <div class="card-body">
                                         <div class="float-left">
                                             <p>
-                                                <a href=form-add-surat-masuk.html>
+                                                <a href=form-add-data-laporan.html>
                                                     <button type="button" class="btn btn-info btn-lg">Tambah Data</button></p>
                                                 </a>
                                                 <p><a class="waves-effect waves-light" href="#"><i
@@ -281,12 +281,8 @@
                                                                 <tr>
                                                                     <th><input type="checkbox" class="checked-all"></th>
                                                                     <th>No</th>
-                                                                    <th>No. Surat</th>
-                                                                    <th>Tanggal Surat</th>
-                                                                    <th>Tanggal Terima</th>
-                                                                    <th>Asal Surat</th>
                                                                     <th>Perihal</th>
-                                                                    <th>File</th>
+                                                                    <th>File pdf/jpg</th>
                                                                     <th>Aksi</th>
                                                                 </tr>
                                                             </thead>
@@ -294,40 +290,24 @@
                                                                 <tr>
                                                                     <td><input type="checkbox" name="pilih"></td>
                                                                     <td>1</td>
-                                                                    <td>SR-121</td>
-                                                                    <td>1 Oktober 2021</td>
-                                                                    <td>4 Oktober 2021</td>
-                                                                    <td>Politeknik Negeri Jember</td>
                                                                     <td>Perizinan lokasi PKL</td>
                                                                     <td>PKL.pdf</td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td><input type="checkbox" name="pilih"></td>
                                                                     <td>2</td>
-                                                                    <td>SR-122</td>
-                                                                    <td>4 Oktober 2021</td>
-                                                                    <td>5 Oktober 2021</td>
-                                                                    <td>Tokopedia</td>
                                                                     <td>Meeting</td>
                                                                     <td>meet-tokopedia.pdf</td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td><input type="checkbox" name="pilih"></td>
                                                                     <td>3</td>
-                                                                    <td>SR-123</td>
-                                                                    <td>4 Oktober 2021</td>
-                                                                    <td>7 Oktober 2021</td>
-                                                                    <td>Lazada</td>
                                                                     <td>Meeting</td>
                                                                     <td>meet-gojek.pdf</td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td><input type="checkbox" name="pilih"></td>
                                                                     <td>4</td>
-                                                                    <td>SR-124</td>
-                                                                    <td>4 Oktober 2021</td>
-                                                                    <td>8 Oktober 2021</td>
-                                                                    <td>Shopee</td>
                                                                     <td>Meeting</td>
                                                                     <td>meet-shopee.pdf</td>
 
