--- a/admin/form-add-data-pengguna.html
+++ b/admin/form-add-data-pengguna.html
@@ -73,7 +73,7 @@
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <li><a href="disposisi.html">Disposisi</a></li>
+                                <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
                             </ul>
                         </li>
 
@@ -93,6 +93,16 @@
 
                         <li>
                                 <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
+                            </li>
+
+                            <li class="has_sub">
+                           </li>
+                            </a>
+                        </li>
+
+                        <li>
+                                <a href="laporan.html" class="waves-effect waves-light"><i
+                                    class="mdi mdi-library-books"></i><span> Laporan Disposisi</span></a>
                             </li>
 
                     </ul>
@@ -255,38 +265,36 @@
                                         <div class="card-body">
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Nama</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="Arnetta" id="example-text-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
                                                 <label for="example-date-input" class="col-sm-2 col-form-label">Email</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="arnet67@gmail.com" id="example-date-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
                                                 <label for="example-date-input" class="col-sm-2 col-form-label">Role</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="Divisi" id="example-date-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Username</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="Arneta" id="example-text-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Password</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="arnet26" id="example-text-input">
                                                 </div>
                                             </div>
-                                            </div>
-                                            </div>
-                                            <br>
-                                            <div class="col-md-10 offset-md-2">
+                                            <div class="form-group row">
+                                                                <div class="col-md-10 offset-md-2">
                                                             <div class="input-group mt-2">
                                                                 <div class="custom">
                                                                 <div class="input-group-append">
