--- a/admin/form-add-jenis-dokumen.html
+++ b/admin/form-add-jenis-dokumen.html
@@ -72,7 +72,7 @@
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <li><a href="disposisi.html">Disposisi</a></li>
+                                <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
                             </ul>
                         </li>
 
@@ -87,6 +87,16 @@
                                     class="mdi mdi-folder-account"></i><span> Data Pengguna </span>
                             </a>
                         </li>
+
+                        <li class="has_sub">
+                           </li>
+                            </a>
+                        </li>
+
+                        <li>
+                                <a href="laporan.html" class="waves-effect waves-light"><i
+                                    class="mdi mdi-library-books"></i><span> Laporan Disposisi</span></a>
+                            </li>
 
                     </ul>
                 </div>
@@ -250,12 +260,25 @@
                                         <div class="card-body">
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Nama/Jenis Dokumen</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="Akte Perusahaan" id="example-text-input">
                                                 </div>
                                             </div>
+                                            <div class="form-group row">
+                                                                <div class="col-md-10 offset-md-2">
+                                                            <div class="input-group mt-2">
+                                                                <div class="custom">
                                                                 <div class="input-group-append">
-                                                                    <button class="btn btn-primary" type="button">Simpan</button>
+
+                                                                <a href=jenis-dokumen.html>
+                                                                    <button class="btn btn-primary" type="button">Simpan</button></a>
+                                                                </div>
+                                                                    
+                                                                </div> &nbsp &nbsp
+                                                                <div class="input-group-append">
+
+                                                                <a href=jenis-dokumen.html>
+                                                                    <button class="btn btn-danger" type="button">Batal</button></a>
                                                                 </div>
                                                             </div>
                                                         </div>
