--- a/admin/update-profile.html
+++ b/admin/update-profile.html
@@ -73,7 +73,7 @@
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <li><a href="disposisi.html">Disposisi</a></li>
+                                <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
                             </ul>
                         </li>
 
@@ -95,6 +95,15 @@
                                 <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
                             </li>
 
+                            <li class="has_sub">
+                           </li>
+                            </a>
+                        </li>
+
+                        <li>
+                                <a href="laporan.html" class="waves-effect waves-light"><i
+                                    class="mdi mdi-library-books"></i><span> Laporan Disposisi</span></a>
+                            </li>
                     </ul>
                 </div>
                 <div class="clearfix"></div>
