--- a/pimpinan/surat-keluar.html
+++ b/pimpinan/surat-keluar.html
@@ -73,7 +73,7 @@
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <li><a href="disposisi.html">Disposisi</a></li>
+                                <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
                             </ul>
                         </li>
 
@@ -242,10 +242,6 @@
                                                 <div class="card m-b-30">
                                                     <div class="card-body">
                                                         <div class="float-left">
-                                                            <p>
-                                                                <a href=form-add-surat-keluar.html>
-                                                                    <button type="button" class="btn btn-info btn-lg">Tambah Data</button></p>
-                                                                </a>
                                                                 <p><a class="waves-effect waves-light" href="#"><i
                                                     class="mdi mdi-numeric-9-plus-box-multiple-outline"></i> Kirim ke Admin</a></p>
                                                             </div>
