--- a/pimpinan/form-add-jenis-dokumen.html
+++ b/pimpinan/form-add-jenis-dokumen.html
@@ -246,8 +246,21 @@
                                                     <input class="form-control" type="text" value="Akte Perusahaan" id="example-text-input">
                                                 </div>
                                             </div>
+                                            <div class="form-group row">
+                                                                <div class="col-md-10 offset-md-2">
+                                                            <div class="input-group mt-2">
+                                                                <div class="custom">
                                                                 <div class="input-group-append">
-                                                                    <button class="btn btn-primary" type="button">Simpan</button>
+
+                                                                <a href=jenis-dokumen.html>
+                                                                    <button class="btn btn-primary" type="button">Simpan</button></a>
+                                                                </div>
+                                                                    
+                                                                </div> &nbsp &nbsp
+                                                                <div class="input-group-append">
+
+                                                                <a href=jenis-dokumen.html>
+                                                                    <button class="btn btn-danger" type="button">Batal</button></a>
                                                                 </div>
                                                             </div>
                                                         </div>
