--- a/pimpinan/form-add-jenis-dokumen.html
+++ b/pimpinan/form-add-jenis-dokumen.html
@@ -266,7 +266,7 @@
                                                                 <div class="input-group-append">
 
                                                                 <a href=jenis-dokumen.html>
-                                                                    <button class="btn btn-danger" type="button">Kembali</button></a>
+                                                                    <button class="btn btn-danger" type="button">Batal</button></a>
                                                                 </div>
                                                             </div>
                                                             </div>
