--- a/pimpinan/data-dokumen.html
+++ b/pimpinan/data-dokumen.html
@@ -61,8 +61,8 @@
                                     class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="#">Jenis Data</a></li>
-                                <li><a href="#">Data Dokumen</a></li>
+                                <li><a href="jenis-dokumen.html">Jenis Dokumen</a></li>
+                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
                             </ul>
                         </li>
 
