--- a/pimpinan/surat-keluar.html
+++ b/pimpinan/surat-keluar.html
@@ -61,7 +61,7 @@
                                     class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Data</a></li>
+                                <li><a href="jenis-dokumen.html">Jenis Dokumen</a></li>
                                 <li><a href="data-dokumen.html">Data Dokumen</a></li>
                             </ul>
                         </li>
@@ -73,7 +73,7 @@
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <li><a href="disposisi.html">Disposisi</a></li> 
+                                <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
                             </ul>
                         </li>
 
@@ -82,6 +82,28 @@
                             </a>
                         </li>
 
+                        <li>
+                                <a href="divisi-divisi.html" class="waves-effect waves-light"><i class="mdi mdi-division-box"></i><span> Data Divisi </span></a>
+                            </li>
+
+                        <li class="has_sub">
+                           </li>
+                            </a>
+                        </li>
+
+                        <li>
+                                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
+                            </li>
+
+                            <li class="has_sub">
+                           </li>
+                            </a>
+                        </li>
+
+                        <!-- <li>
+                                <a href="laporan.html" class="waves-effect waves-light"><i
+                                    class="mdi mdi-library-books"></i><span> Laporan Disposisi</span></a>
+                            </li> -->
 
                             </ul>
                         </div>
@@ -198,7 +220,9 @@
                                             </div>
                                             <a class="dropdown-item" href="profile.html"><i class="mdi mdi-account-circle "></i>
                                             Profile</a>
-                                            
+                                            <a class="dropdown-item" href="#"><span
+                                                class="badge badge-primary float-right">3</span><i
+                                                class="mdi mdi-settings "></i> Settings</a>
                                                 <a class="dropdown-item" href="#"><i class="mdi mdi-lock-open-outline"></i> Lock
                                                 screen</a>
                                                 <div class="dropdown-divider"></div>
@@ -242,8 +266,12 @@
                                                 <div class="card m-b-30">
                                                     <div class="card-body">
                                                         <div class="float-left">
+                                                            <p>
+                                                                <a href=form-add-surat-keluar.html>
+                                                                    <button type="button" class="btn btn-info btn-lg">Tambah Data</button></p>
+                                                                </a>
                                                                 <p><a class="waves-effect waves-light" href="#"><i
-                                                    class="mdi mdi-numeric-9-plus-box-multiple-outline"></i> Kirim ke Admin</a></p>
+                                                    class="mdi mdi-numeric-9-plus-box-multiple-outline"></i> Kirim ke Pimpinan</a></p>
                                                             </div>
                                                             <div class="table-responsive">
                                                                 <table class="table" id="my-table">
