--- a/admin/jenis-arsip.html
+++ b/admin/jenis-arsip.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-        <title>Arsipin - Jenis Dokumen</title>
+        <title>Arsipin - Jenis Arsip</title>
         <meta content="Admin Dashboard" name="description" />
         <meta content="themesdesign" name="author" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -57,17 +57,17 @@
 
                             <li class="has_sub">
                                 <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                        class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                                        class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                                         class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                                 <ul class="list-unstyled">
-                                    <li><a href="jenis-dokumen.html">Jenis Dokumen</a></li>
-                                    <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                    <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
+                                    <li><a href="data-arsip.html">Data Arsip</a></li>
                                 </ul>
                             </li>
 
                             <li class="has_sub">
                                 <a href="javascript:void(0);" class="waves-effect"><i
-                                        class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
+                                        class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
                                         class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                                 <ul class="list-unstyled">
                                     <li><a href="surat-masuk.html">Surat Masuk</a></li>
@@ -250,7 +250,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="page-title-box">
-                                    <h4 class="page-title">Jenis Dokumen</h4>
+                                    <h4 class="page-title">Jenis Arsip</h4>
                                 </div>
                             </div>
                         </div>
@@ -260,7 +260,7 @@
                                     <div class="card-body">
                                         <div class="float-left">
                                             <p>
-                                                <a href=form-add-jenis-dokumen.html>
+                                                <a href=form-add-jenis-arsip.html>
                                                 <button type="button" class="btn btn-info btn-lg">Tambah Data</button></p>
                                             </a>
                                     </div>
