--- a/admin/laporan.html
+++ b/admin/laporan.html
@@ -100,10 +100,10 @@
                             </a>
                         </li>
 
-                        <!-- <li>
+                        <li>
                                 <a href="laporan.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-library-books"></i><span>Laporan Disposisi</span></a>
-                            </li> -->
+                                    class="mdi mdi-library-books"></i><span>Laporan Disposi</span></a>
+                            </li>
 
         </ul>
     </div>
