--- a/divisi/data-arsip.html
+++ b/divisi/data-arsip.html
@@ -58,36 +58,23 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                    class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                                    class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="#">Jenis Data</a></li>
-                                <li><a href="#">Data Dokumen</a></li>
+                                <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
+                                <li><a href="data-arsip.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                    class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
+                                    class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
-                                <li><a href="surat-keluar.html">Surat Keluar</a></li>
+                                <!-- <li><a href="surat-keluar.html">Surat Keluar</a></li> -->
                             </ul>
                         </li>
-
-                        <li class="has_sub">
-                           </li>
-                            </a>
-                        </li>
-
-                        <li>
-                                <a href="laporan.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-library-books"></i><span> Laporan </span></a>
-                            </li>
-
-                        
-                        </ul>
                     </div>
                     <div class="clearfix"></div>
                 </div> <!-- end sidebarinner -->
@@ -237,7 +224,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="page-title-box">
-                                    <h4 class="page-title">Data Dokumen</h4>
+                                    <h4 class="page-title">Data Arsip</h4>
                                 </div>
                             </div>
                         </div>
@@ -247,7 +234,7 @@
                                     <div class="card-body">
                                         <div class="float-left">
                                             <p>
-                                                <a href="form-add-data-dokumen.html">
+                                                <a href="form-add-data-arsip.html">
                                                 <button type="button" class="btn btn-info btn-lg">Tambah Data</button></p>
                                             </a>
                                     </div>
