--- a/admin/divisi-divisi.html
+++ b/admin/divisi-divisi.html
@@ -58,17 +58,17 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                    class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                                    class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Dokumen</a></li>
-                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
+                                <li><a href="data-arsip.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                    class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
+                                    class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
@@ -266,8 +266,9 @@
                                         <div class="float-left">
                                             <p>
                                                 <a href=form-add-data-divisi.html>
-                                                <button type="button" class="btn btn-info btn-lg">Tambah Data</button></p>
+                                                <button type="button" class="btn btn-info btn-lg">Tambah Data</button>
                                             </a>
+                                        </p>
                                     </div>
                                         <div class="table-responsive">
                                             <table class="table" id="my-table">
@@ -284,8 +285,8 @@
                                                         <td>Marketing</td>
                                                     </tr>
                                                     <tr>
-                                                        <td>1</td>
-                                                        <td>Marketing</td>
+                                                        <td>2</td>
+                                                        <td>HRD</td>
                                                     </tr>
                                                     
                                                 </tbody>
