--- a/admin/form-add-data-arsip.html
+++ b/admin/form-add-data-arsip.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Arsipin - Data Dokumen</title>
+    <title>Arsipin - Data Arsip</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="themesdesign" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -57,17 +57,17 @@
 
                     <li class="has_sub">
                         <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                            class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                            class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                             class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Dokumen</a></li>
-                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
+                                <li><a href="data-arsip.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
+                                class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
                                 class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                                 <ul class="list-unstyled">
                                     <li><a href="surat-masuk.html">Surat Masuk</a></li>
@@ -250,7 +250,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="page-title-box">
-                                            <h4 class="page-title">Add Data Dokumen</h4>
+                                            <h4 class="page-title">Add Data Arsip</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -265,10 +265,10 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
-                                                    <label for="example-date-input" class="col-sm-2 col-form-label">Jenis Dokumen</label>
+                                                    <label for="example-date-input" class="col-sm-2 col-form-label">Jenis Arsip</label>
                                                     <div class="col-sm-5">
-                                                        <select class="form-control" name="jenis dokumen">
-                                                            <option value=""hidden disabled selected>Pilih Jenis Dokumen</option>
+                                                        <select class="form-control" name="jenis_arsip">
+                                                            <option value=""hidden disabled selected>Pilih Jenis Arsip</option>
                                                             <option value="akte perusahaan">Akte Perusahaan</option>
                                                             <option value="akte perusahaan">MOU</option>
                                                             <option value="akte perusahaan">Kontrak Kerja</option>
@@ -309,14 +309,14 @@
                                                                 <div class="custom">
                                                                 <div class="input-group-append">
 
-                                                                <a href=data-dokumen.html>
+                                                                <a href=data-arsip.html>
                                                                     <button class="btn btn-primary" type="button">Simpan</button></a>
                                                                 </div>
                                                                     
                                                                 </div> &nbsp &nbsp
                                                                 <div class="input-group-append">
 
-                                                                <a href=data-dokumen.html>
+                                                                <a href=data-arsip.html>
                                                                     <button class="btn btn-danger" type="button">Batal</button></a>
                                                                 </div>
                                                             </div>
