--- a/admin/pengguna-pengguna.html
+++ b/admin/pengguna-pengguna.html
@@ -58,17 +58,17 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                    class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                                    class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Dokumen</a></li>
-                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
+                                <li><a href="data-arsip.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                    class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
+                                    class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
@@ -264,10 +264,11 @@
                                 <div class="card m-b-30">
                                     <div class="card-body">
                                         <div class="float-left">
-                                            <!-- <p>
+                                            <p>
                                                 <a href=form-add-data-pengguna.html>
-                                                <button type="button" class="btn btn-info btn-lg">Tambah Data</button></p>
-                                            </a> -->
+                                                <button type="button" class="btn btn-info btn-lg">Tambah Data</button>
+                                            </a>
+                                        </p>
                                     </div>
                                         <div class="table-responsive">
                                             <table class="table" id="my-table">
@@ -287,11 +288,18 @@
                                                         <td>1</td>
                                                         <td>Hana Lestari</td>
                                                         <td>hana@gmail.com</td>
-                                                        <td>Divisi</td>
+                                                        <td>Divisi Marketing</td>
                                                         <td>hanalestari1</td>
                                                         <td>hana123</td>
                                                     </tr>
-                                                   
+                                                   <tr>
+                                                        <td>2</td>
+                                                        <td>Hani L</td>
+                                                        <td>hani@gmail.com</td>
+                                                        <td>Divisi HRD</td>
+                                                        <td>hani_l</td>
+                                                        <td>hani123</td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
