--- a/admin/surat-keluar.html
+++ b/admin/surat-keluar.html
@@ -46,64 +46,64 @@
                         <li class="menu-title">Overview</li>
 
                         <li class="has_sub">
-                           </li>
-                            </a>
                         </li>
+                    </a>
+                </li>
 
-                        <li>
-                                <a href="dashboard.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-view-dashboard"></i><span> Dashboard </span></a>
-                            </li>
+                <li>
+                    <a href="dashboard.html" class="waves-effect waves-light"><i
+                        class="mdi mdi-view-dashboard"></i><span> Dashboard </span></a>
+                    </li>
 
 
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                    class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
-                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                    <li class="has_sub">
+                        <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                            class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
+                            class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Dokumen</a></li>
-                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
+                                <li><a href="data-arsip.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                    class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
-                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
-                            <ul class="list-unstyled">
-                                <li><a href="surat-masuk.html">Surat Masuk</a></li>
-                                <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                           </li>
-                            </a>
-                        </li>
-
-                        <li>
-                                <a href="divisi-divisi.html" class="waves-effect waves-light"><i class="mdi mdi-division-box"></i><span> Data Divisi </span></a>
-                            </li>
-
-                        <li class="has_sub">
-                           </li>
-                            </a>
-                        </li>
-
-                        <li>
-                                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
+                                class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
+                                class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                                <ul class="list-unstyled">
+                                    <li><a href="surat-masuk.html">Surat Masuk</a></li>
+                                    <li><a href="surat-keluar.html">Surat Keluar</a></li>
+                                    <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
+                                </ul>
                             </li>
 
                             <li class="has_sub">
-                           </li>
-                            </a>
-                        </li>
+                            </li>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="divisi-divisi.html" class="waves-effect waves-light"><i class="mdi mdi-division-box"></i><span> Data Divisi </span></a>
+                    </li>
+
+                    <li class="has_sub">
+                    </li>
+                </a>
+            </li>
+
+            <li>
+                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
+            </li>
+
+            <li class="has_sub">
+            </li>
+        </a>
+    </li>
 
                         <!-- <li>
                                 <a href="laporan.html" class="waves-effect waves-light"><i
                                     class="mdi mdi-library-books"></i><span> Laporan Disposisi</span></a>
-                            </li> -->
+                                </li> -->
 
                             </ul>
                         </div>
@@ -270,98 +270,93 @@
                                                                 <a href=form-add-surat-keluar.html>
                                                                     <button type="button" class="btn btn-info btn-lg">Tambah Data</button></p>
                                                                 </a>
-                                                                <p><a class="waves-effect waves-light" href="#"><i
-                                                    class="mdi mdi-numeric-9-plus-box-multiple-outline"></i> Kirim ke Pimpinan</a></p>
-                                                            </div>
-                                                            <div class="table-responsive">
-                                                                <table class="table" id="my-table">
-                                                                    <thead>
-                                                                        <tr>
-                                                                            <th><input type="checkbox" class="checked-all"></th>
-                                                                            <th>No</th>
-                                                                            <th>No. Surat</th>
-                                                                            <th>Tanggal Surat</th>
-                                                                            <th>Tujuan Surat</th>
-                                                                            <th>Perihal</th>
-                                                                            <th>File</th>
-                                                                            <th>Aksi</th>
-                                                                        </tr>
-                                                                    </thead>
-                                                                    <tbody>
-                                                                        <tr>
-                                                                            <td><input type="checkbox" name="pilih"></td>
-                                                                            <td>1</td>
-                                                                            <td>SR-131</td>
-                                                                            <td>5 Oktober 2021</td>
-                                                                            <td>Politeknik Negeri Jember</td>
-                                                                            <td>Penerimaan mahasiswa PKL</td>
-                                                                            <td>PKL Polije.pdf</td>
-                                                                        </tr>
-                                                                        <tr>
-                                                                            <td><input type="checkbox" name="pilih"></td>
-                                                                            <td>2</td>
-                                                                            <td>SR-132</td>
-                                                                            <td>6 Oktober 2021</td>
-                                                                            <td>Tokopedia</td>
-                                                                            <td>Meeting</td>
-                                                                            <td>meet-tokopedia.pdf</td>
-                                                                        </tr>
-                                                                    </tbody>
-                                                                </table>
-                                                            </div>
+                                                                </div>
+                                                                <div class="table-responsive">
+                                                                    <table class="table" id="my-table">
+                                                                        <thead>
+                                                                            <tr>
+                                                                                <th>No</th>
+                                                                                <th>No. Surat</th>
+                                                                                <th>Tanggal Surat</th>
+                                                                                <th>Tujuan Surat</th>
+                                                                                <th>Perihal</th>
+                                                                                <th>File</th>
+                                                                                <th>Aksi</th>
+                                                                            </tr>
+                                                                        </thead>
+                                                                        <tbody>
+                                                                            <tr>
+                                                                                <td>1</td>
+                                                                                <td>SR-131</td>
+                                                                                <td>5 Oktober 2021</td>
+                                                                                <td>Politeknik Negeri Jember</td>
+                                                                                <td>Penerimaan mahasiswa PKL</td>
+                                                                                <td>PKL Polije.pdf</td>
+                                                                            </tr>
+                                                                            <tr>
+                                                                                <td>2</td>
+                                                                                <td>SR-132</td>
+                                                                                <td>6 Oktober 2021</td>
+                                                                                <td>Tokopedia</td>
+                                                                                <td>Meeting</td>
+                                                                                <td>meet-tokopedia.pdf</td>
+                                                                            </tr>
+                                                                        </tbody>
+                                                                    </table>
+                                                                </div>
 
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                </div> <!-- end col -->
-                                            </div> <!-- end row -->
+                                                    </div> <!-- end col -->
+                                                </div> <!-- end row -->
 
 
-                                        </div><!-- container -->
+                                            </div><!-- container -->
 
-                                    </div> <!-- Page content Wrapper -->
+                                        </div> <!-- Page content Wrapper -->
 
-                                </div><!-- container -->
+                                    </div><!-- container -->
 
-                            </div> <!-- Page content Wrapper -->
+                                </div> <!-- Page content Wrapper -->
 
-                        </div> <!-- content -->
+                            </div> <!-- content -->
 
-                        <footer class="footer">
-                            © 2018 - 2020 Dashor by Themesdesign.
-                        </footer>
+                            <footer class="footer">
+                                © 2018 - 2020 Dashor by Themesdesign.
+                            </footer>
+
+                        </div>
+                        <!-- End Right content here -->
 
                     </div>
-                    <!-- End Right content here -->
-
-                </div>
-                <!-- END wrapper -->
+                    <!-- END wrapper -->
 
 
-                <!-- jQuery  -->
-                <script src="assets/js/jquery.min.js"></script>
-                <script src="assets/js/bootstrap.bundle.min.js"></script>
-                <script src="assets/js/modernizr.min.js"></script>
-                <script src="assets/js/detect.js"></script>
-                <script src="assets/js/fastclick.js"></script>
-                <script src="assets/js/jquery.slimscroll.js"></script>
-                <script src="assets/js/jquery.blockUI.js"></script>
-                <script src="assets/js/waves.js"></script>
-                <script src="assets/js/jquery.nicescroll.js"></script>
-                <script src="assets/js/jquery.scrollTo.min.js"></script>
+                    <!-- jQuery  -->
+                    <script src="assets/js/jquery.min.js"></script>
+                    <script src="assets/js/bootstrap.bundle.min.js"></script>
+                    <script src="assets/js/modernizr.min.js"></script>
+                    <script src="assets/js/detect.js"></script>
+                    <script src="assets/js/fastclick.js"></script>
+                    <script src="assets/js/jquery.slimscroll.js"></script>
+                    <script src="assets/js/jquery.blockUI.js"></script>
+                    <script src="assets/js/waves.js"></script>
+                    <script src="assets/js/jquery.nicescroll.js"></script>
+                    <script src="assets/js/jquery.scrollTo.min.js"></script>
 
-                <script src="assets/plugins/tiny-editable/mindmup-editabletable.js"></script>
-                <script src="assets/plugins/tiny-editable/numeric-input-example.js"></script>
-                <script src="assets/plugins/tabledit/jquery.tabledit.js"></script>
-                <script src="assets/pages/edit-table.js"></script>
+                    <script src="assets/plugins/tiny-editable/mindmup-editabletable.js"></script>
+                    <script src="assets/plugins/tiny-editable/numeric-input-example.js"></script>
+                    <script src="assets/plugins/tabledit/jquery.tabledit.js"></script>
+                    <script src="assets/pages/edit-table.js"></script>
 
-                <!-- App js -->
-                <script src="assets/js/app.js"></script>
+                    <!-- App js -->
+                    <script src="assets/js/app.js"></script>
 
-            </body>
+                </body>
 <!--<script>
     $('.checked-all').on('change', function(e){
     e.preventDefault()
     $('input[name=pilih]').prop('checked', this.checked)
-    })-->
+})-->
 </script>
-            </html>
+</html>
