--- a/divisi/dashboard.html
+++ b/divisi/dashboard.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-        <title>Arspin-in - Dashboard Pimpinan</title>
+        <title>Arspin-in - Dashboard Divisi</title>
         <meta content="Admin Dashboard" name="description" />
         <meta content="themesdesign" name="author" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -61,36 +61,24 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                    class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                                    class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Dokumen</a></li>
-                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
+                                <li><a href="data-arsip.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                    class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
+                                    class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
-                                <li><a href="surat-keluar.html">Surat Keluar</a></li>
+                                <!-- <li><a href="surat-keluar.html">Surat Keluar</a></li> -->
                             </ul>
                         </li>
 
-                        <li class="has_sub">
-                           </li>
-                            </a>
-                        </li>
-
-                        <li>
-                                <a href="laporan.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-library-books"></i><span> Laporan </span></a>
-                            </li>
-
-                        
-                        </ul>
                     </div>
                     <div class="clearfix"></div>
                 </div> <!-- end sidebarinner -->
@@ -249,7 +237,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-12 col-xl-3">
+                                <!-- <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
                                             <i class="mdi mdi-buffer"></i>
@@ -259,7 +247,7 @@
                                             <h4 class="mb-0">5<small class="ml-2"></small></h4>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
