--- a/divisi/edit-surat-keluar.html
+++ b/divisi/edit-surat-keluar.html
@@ -59,35 +59,23 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                    class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                                    class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Data</a></li>
-                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
+                                <li><a href="data-arsip.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                    class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
+                                    class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
                             </ul>
                         </li>
-
-                        <li class="has_sub">
-                           </li>
-                            </a>
-                        </li>
-
-                        <li>
-                                <a href="laporan.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-library-books"></i><span> Laporan </span></a>
-                            </li>
-
-                            </ul>
                         </div>
                         <div class="clearfix"></div>
                     </div> <!-- end sidebarinner -->
@@ -300,7 +288,7 @@
                                                                 </div> &nbsp &nbsp
                                                                 <div class="input-group-append">
 
-                                                                <a href=divisi-divisi.html>
+                                                                <a href=surat-keluar.html>
                                                                     <button class="btn btn-danger" type="button">Batal</button></a>
                                                                 </div>
                                                             </div>
