--- a/divisi/form-add-surat-masuk.html
+++ b/divisi/form-add-surat-masuk.html
@@ -72,7 +72,7 @@
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
-                                <li><a href="surat-keluar.html">Surat Keluar</a></li>
+                                <!-- <li><a href="surat-keluar.html">Surat Keluar</a></li> -->
                             </ul>
                         </li>
 
