--- a/divisi/surat-masuk.html
+++ b/divisi/surat-masuk.html
@@ -58,35 +58,23 @@
 
                     <li class="has_sub">
                         <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                            class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                            class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                             class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Data</a></li>
-                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
+                                <li><a href="data-arsip.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect"><i
-                                class="mdi mdi-file-document"></i><span> Data Arsip </span> <span
+                                class="mdi mdi-file-document"></i><span> Data Dokumen </span> <span
                                 class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                                 <ul class="list-unstyled">
                                     <li><a href="surat-masuk.html">Surat Masuk</a></li>
-                                    <li><a href="surat-keluar.html">Surat Keluar</a></li>
+                                    <!-- <li><a href="surat-keluar.html">Surat Keluar</a></li> -->
                                 </ul>
                             </li>
-
-                            <li class="has_sub">
-                           </li>
-                            </a>
-                        </li>
-
-                        <li>
-                                <a href="laporan.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-library-books"></i><span> Laporan </span></a>
-                            </li>
-
-        </ul>
     </div>
     <div class="clearfix"></div>
 </div> <!-- end sidebarinner -->
@@ -248,11 +236,9 @@
                                             <p>
 
                                                     </div>
-                                                    <div class="table-responsive">
-                                                        <table class="table" id="my-table">
+                                                        <table class="table">
                                                             <thead>
                                                                 <tr>
-                                                                    <th><input type="checkbox" class="checked-all"></th>
                                                                     <th>No</th>
                                                                     <th>No. Surat</th>
                                                                     <th>Tanggal Surat</th>
@@ -265,27 +251,31 @@
                                                             </thead>
                                                             <tbody>
                                                                 <tr>
-                                                                    <td><input type="checkbox" name="pilih"></td>
                                                                     <td>1</td>
                                                                     <td>SR-121</td>
                                                                     <td>1 Oktober 2021</td>
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>Politeknik Negeri Jember</td>
                                                                     <td>Perizinan lokasi PKL</td>
-                                                                    <td>PKL.pdf</td>
+                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">PKL.pdf</a></td>
+                                                                    <td><a href="#" class="fa fa-check" onclick="klik_laksanakan()" id="laksanakan"></a>
+                                                                        &nbsp&nbsp
+                                                                        <a href="#" class="fa fa-times" onclick="klik_abaikan()" id="abaikan"></a>
+                                                                    </td>
                                                                 </tr>
-                                                                <tr>
-                                                                    <td><input type="checkbox" name="pilih"></td>
                                                                     <td>2</td>
                                                                     <td>SR-122</td>
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>5 Oktober 2021</td>
                                                                     <td>Tokopedia</td>
                                                                     <td>Meeting</td>
-                                                                    <td>meet-tokopedia.pdf</td>
+                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-tokopedia.pdf</a></td>
+                                                                    <td><a href="#" class="fa fa-check" onclick="klik_laksanakan2()" id="laksanakan2"></a>
+                                                                        &nbsp&nbsp
+                                                                        <a href="#" class="fa fa-times" onclick="klik_abaikan2()" id="abaikan2"></a>
+                                                                    </td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td><input type="checkbox" name="pilih"></td>
                                                                     <td>3</td>
                                                                     <td>SR-123</td>
                                                                     <td>4 Oktober 2021</td>
@@ -293,9 +283,12 @@
                                                                     <td>Lazada</td>
                                                                     <td>Meeting</td>
                                                                     <td>meet-gojek.pdf</td>
+                                                                    <td><a href="#" class="fa fa-check" onclick="klik_laksanakan()" id="laksanakan"></a>
+                                                                        &nbsp&nbsp
+                                                                        <a href="#" class="fa fa-times" onclick="klik_abaikan()" id="abaikan"></a>
+                                                                    </td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td><input type="checkbox" name="pilih"></td>
                                                                     <td>4</td>
                                                                     <td>SR-124</td>
                                                                     <td>4 Oktober 2021</td>
@@ -303,6 +296,10 @@
                                                                     <td>Shopee</td>
                                                                     <td>Meeting</td>
                                                                     <td>meet-shopee.pdf</td>
+                                                                    <td><a href="#" class="fa fa-check" onclick="klik_laksanakan()" id="laksanakan"></a>
+                                                                        &nbsp&nbsp
+                                                                        <a href="#" class="fa fa-times" onclick="klik_abaikan()" id="abaikan"></a>
+                                                                    </td>
 
                                                                 </tr>
                                                             </tbody>
