ubah admin dan divisi

--- a/admin/surat-keluar.html
+++ b/admin/surat-keluar.html
@@ -291,7 +291,7 @@
                                                                                 <td>5 Oktober 2021</td>
                                                                                 <td>Politeknik Negeri Jember</td>
                                                                                 <td>Penerimaan mahasiswa PKL</td>
-                                                                                <td>PKL Polije.pdf</td>
+                                                                                <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">PKL-Polije.pdf</a></td>
                                                                             </tr>
                                                                             <tr>
                                                                                 <td>2</td>
@@ -299,7 +299,7 @@
                                                                                 <td>6 Oktober 2021</td>
                                                                                 <td>Tokopedia</td>
                                                                                 <td>Meeting</td>
-                                                                                <td>meet-tokopedia.pdf</td>
+                                                                                <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-tokopedia.pdf</a></td>
                                                                             </tr>
                                                                         </tbody>
                                                                     </table>
