--- a/admin/form-add-data-arsip.html
+++ b/admin/form-add-data-arsip.html
@@ -259,7 +259,7 @@
                                         <div class="card m-b-30">
                                             <div class="card-body">
                                                 <div class="form-group row">
-                                                    <label for="example-date-input" class="col-sm-2 col-form-label">Nama</label>
+                                                    <label for="example-date-input" class="col-sm-2 col-form-label">Nama Arsip</label>
                                                     <div class="col-sm-5">
                                                         <input class="form-control" type="text" value="" id="example-date-input">
                                                     </div>
@@ -277,6 +277,13 @@
                                                             <option value="akte perusahaan">CV</option>
                                                         </select>
 
+                                                    </div>
+                                                </div>
+
+                                                <div class="form-group row">
+                                                    <label for="example-date-input" class="col-sm-2 col-form-label">Tanggal Upload</label>
+                                                    <div class="col-sm-5">
+                                                        <input class="form-control" type="text" value="" id="example-date-input">
                                                     </div>
                                                 </div>
 
