--- a/admin/surat-masuk.html
+++ b/admin/surat-masuk.html
@@ -293,7 +293,7 @@
                                                                             <td>4 Oktober 2021</td>
                                                                             <td>Politeknik Negeri Jember</td>
                                                                             <td>Perizinan lokasi PKL</td>
-                                                                            <td>PKL.pdf</td>
+                                                                            <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">PKL.pdf</a></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td>2</td>
@@ -302,7 +302,7 @@
                                                                             <td>5 Oktober 2021</td>
                                                                             <td>Tokopedia</td>
                                                                             <td>Meeting</td>
-                                                                            <td>meet-tokopedia.pdf</td>
+                                                                            <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-tokopedia.pdf</a></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td>3</td>
@@ -311,7 +311,7 @@
                                                                             <td>7 Oktober 2021</td>
                                                                             <td>Lazada</td>
                                                                             <td>Meeting</td>
-                                                                            <td>meet-gojek.pdf</td>
+                                                                            <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-gojek.pdf</a></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td>4</td>
@@ -320,8 +320,7 @@
                                                                             <td>8 Oktober 2021</td>
                                                                             <td>Shopee</td>
                                                                             <td>Meeting</td>
-                                                                            <td>meet-shopee.pdf</td>
-
+                                                                            <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-shopee.pdf</a></td>
                                                                         </tr>
                                                                     </tbody>
                                                                 </table>
