--- a/resepsionis/pages-register.html
+++ b/resepsionis/pages-register.html
@@ -59,9 +59,9 @@
                             <div class="col-12">
                                 <select class="form-control" name="Role">
                                     <option value=""hidden disabled selected>Role</option>
+                                    <option value="resepsionis">Resepsionis</option>
                                     <option value="admin">Admin</option>
                                     <option value="pimpinan">Pimpinan</option>
-                                    <option value="divisi">Resepsionis</option>
                                 </select>
                             </div>
                         </div>
