--- a/resepsionis/surat-masuk.html
+++ b/resepsionis/surat-masuk.html
@@ -270,7 +270,7 @@
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>Politeknik Negeri Jember</td>
                                                                     <td>Perizinan lokasi PKL</td>
-                                                                    <td>PKL.pdf</td>
+                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">PKL.pdf</a></td>
                                                                     <td><a href="lihat-surat-masuk.html" class="fa fa-eye "></a>    
                                                                         &nbsp&nbsp;
                                                                         <a href="form-edit-surat-masuk.html" class="fa fa-edit "></a></td>
@@ -283,7 +283,7 @@
                                                                     <td>5 Oktober 2021</td>
                                                                     <td>Tokopedia</td>
                                                                     <td>Meeting</td>
-                                                                    <td>meet-tokopedia.pdf</td>
+                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-tokopedia.pdf</a></td></td>
                                                                     <td><a href="lihat-surat-masuk.html" class="fa fa-eye "></a>    
                                                                         &nbsp&nbsp;
                                                                         <a href="form-edit-surat-masuk.html" class="fa fa-edit "></a></td>
@@ -296,7 +296,7 @@
                                                                     <td>7 Oktober 2021</td>
                                                                     <td>Lazada</td>
                                                                     <td>Meeting</td>
-                                                                    <td>meet-gojek.pdf</td>
+                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-lazada.pdf</a></td></td>
                                                                     <td><a href="lihat-surat-masuk.html" class="fa fa-eye "></a>    
                                                                         &nbsp&nbsp;
                                                                         <a href="form-edit-surat-masuk.html" class="fa fa-edit "></a></td>
@@ -309,7 +309,7 @@
                                                                     <td>8 Oktober 2021</td>
                                                                     <td>Shopee</td>
                                                                     <td>Meeting</td>
-                                                                    <td>meet-shopee.pdf</td>
+                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-shopee</a></td></td>
                                                                     <td><a href="lihat-surat-masuk.html" class="fa fa-eye "></a>    
                                                                         &nbsp&nbsp;
                                                                         <a href="form-edit-surat-masuk.html" class="fa fa-edit "></a></td>
