--- a/resepsionis/form-add-data-arsip.html
+++ b/resepsionis/form-add-data-arsip.html
@@ -240,14 +240,14 @@
                                 <div class="col-12">
                                     <div class="card m-b-30">
                                         <div class="card-body">
-                                            <div class="form-group row">
+                                            <!-- <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">No</label>
                                                 <div class="col-sm-10">
                                                     <input class="form-control" type="text" value="" id="example-text-input">
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <div class="form-group row">
-                                                <label for="example-date-input" class="col-sm-2 col-form-label">Nama</label>
+                                                <label for="example-date-input" class="col-sm-2 col-form-label">Nama Arsip</label>
                                                 <div class="col-sm-10">
                                                     <input class="form-control" type="text" value="" id="example-date-input">
                                                 </div>
@@ -267,9 +267,15 @@
 
                                                 </div>
                                             </div>
+                                            <div class="form-group row">
+                                                <label for="example-date-input" class="col-sm-2 col-form-label">Tanggal Upload</label>
+                                                <div class="col-sm-10">
+                                                    <input class="form-control" type="text" value="" id="example-date-input">
+                                                </div>
+                                            </div>
                                             
                                             <div class="form-group row">
-                                                <label for="example-date-input" class="col-sm-2 col-form-label">File</label>
+                                                <label for="example-date-input" class="col-sm-2 col-form-label">File/jpg</label>
                                                 <div class="col-sm-3">
                                                     <div class="input-group">
                                                     <div class="input-group-prepend">
