--- a/resepsionis/surat-keluar.html
+++ b/resepsionis/surat-keluar.html
@@ -270,7 +270,7 @@
                                                                             <td>5 Oktober 2021</td>
                                                                             <td>Politeknik Negeri Jember</td>
                                                                             <td>Penerimaan mahasiswa PKL</td>
-                                                                            <td>PKL Polije.pdf</td>
+                                                                            <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">PKL.pdf</a></td>
                                                                             <td><a href="lihat-surat-keluar.html" class="fa fa-eye"></a>
                                                                             &nbsp&nbsp;
                                                                             <a href="form-edit-surat-keluar.html" class="fa fa-edit "></a></td>
@@ -283,7 +283,7 @@
                                                                             <td>6 Oktober 2021</td>
                                                                             <td>Tokopedia</td>
                                                                             <td>Meeting</td>
-                                                                            <td>meet-tokopedia.pdf</td>
+                                                                            <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-tokopedia.pdf</a></td></td>
                                                                             <td><a href="lihat-surat-keluar.html" class="fa fa-eye"></a>
                                                                                 &nbsp&nbsp;
                                                                                 <a href="form-edit-surat-keluar.html" class="fa fa-edit "></a></td>
