--- a/pimpinan/edit-jenis-arsip.html
+++ b/pimpinan/edit-jenis-arsip.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Arsipin - Tambah Jenis Arsip</title>
+    <title>Arsipin - Edit Jenis Arsip</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="themesdesign" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -74,6 +74,11 @@
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
                             </ul>
+                        </li>
+
+                        <li class="has_sub">
+                           </li>
+                            </a>
                         </li>
 
                     </ul>
@@ -226,7 +231,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="page-title-box">
-                                    <h4 class="page-title">Tambah Jenis Arsip</h4>
+                                    <h4 class="page-title">Edit Jenis Arsip</h4>
                                 </div>
                             </div>
                         </div>
