--- a/pimpinan/surat-keluar.html
+++ b/pimpinan/surat-keluar.html
@@ -268,7 +268,7 @@
                                                                     <td>Perizinan lokasi PKL</td>
                                                                     <td>PKL.pdf</td>
                                                                     <td>
-                                                                    <a href="lihat-suratkeluar.html" class="fa fa-eye"></a>
+                                                                    <a href="lihat-suratkeluar.html"><button type="button" class="btn-warning">Detail</button></a>
                                                                     </td>
                                                                     </tr>
                                                                 </tbody>
