--- a/pimpinan/surat-masuk.html
+++ b/pimpinan/surat-masuk.html
@@ -266,10 +266,8 @@
                                                                     <td>Perizinan lokasi PKL</td>
                                                                     <td> <a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">PKL.pdf</a></td>
                                                                     <td>
-                                                                    
-                                                                    <a href="#" class="fa fa-check" onclick="klik()" id="icon"></a> 
-                                                                    &nbsp&nbsp
-                                                                    <a href="#" class="fa fa-times" onclick="klik_abaikan()" id="abaikan"></a>
+                                                                    <a href="#"><button type="button" class="btn-info">Approval</button></a>&nbsp
+                                                                    <a href="#"><button type="button" class="btn-danger">Abaikan</button></a>
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
@@ -281,9 +279,8 @@
                                                                     <td>Meeting</td>
                                                                     <td> <a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-tokopedia.pdf</a></td>
                                                                     <td>
-                                                                    <a href="#" class="fa fa-check" onclick="klik2()" id="icon2"></a> 
-                                                                    &nbsp&nbsp
-                                                                    <a href="#" class="fa fa-times" onclick="klik_abaikan2()" id="abaikan2"></a>
+                                                                    <a href="#"><button type="button" class="btn-info">Approval</button></a>&nbsp
+                                                                    <a href="#"><button type="button" class="btn-danger">Abaikan</button></a>
                                                                     </td>
                                                                 </tr>
                                                                 
