--- a/pimpinan/data-dokumen.html
+++ b/pimpinan/data-dokumen.html
@@ -276,7 +276,7 @@
                                                         <td>Akte Perusahaan</td>
                                                         <td>14 Oktober 2021</td>
                                                         <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">Akte_Perusahaan.pdf</a></td>
-                                                        <td><a href="#"><button type="button" class="btn-primary">Edit</button></a>&nbsp
+                                                        <td><a href="edit-data-arsip.html"><button type="button" class="btn-primary">Edit</button></a>&nbsp
                                                         <a href="#"><button type="button" class="btn-danger">Hapus</button></a>
                                                         </td>
                                                    
@@ -287,7 +287,7 @@
                                                         <td>NPWP</td>
                                                         <td>14 Oktober 2021</td>
                                                         <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">NPWP_Hummasoft.pdf</a></td>
-                                                        <td><a href="#"><button type="button" class="btn-primary">Edit</button></a>&nbsp
+                                                        <td><a href="edit-data-arsip.html"><button type="button" class="btn-primary">Edit</button></a>&nbsp
                                                         <a href="#"><button type="button" class="btn-danger">Hapus</button></a>
                                                         </td>
                                                     
