--- a/pimpinan/jenis-dokumen.html
+++ b/pimpinan/jenis-dokumen.html
@@ -266,7 +266,7 @@
                                                     <tr>
                                                         <td>2</td>
                                                         <td>MOU</td>
-                                                        <td><a href="#"><button type="button" class="btn-primary">Edit</button></a>&nbsp
+                                                        <td><a href="edit-jenis-arsip.html"><button type="button" class="btn-primary">Edit</button></a>&nbsp
                                                         <a href="#"><button type="button" class="btn-danger">Hapus</button></a>
                                                         </td>
                                                    
@@ -274,7 +274,7 @@
                                                     <tr>
                                                         <td>3</td>
                                                         <td>Kontrak Kerja</td>
-                                                        <td><a href="#"><button type="button" class="btn-primary">Edit</button></a>&nbsp
+                                                        <td><a href="edit-jenis-arsip.html"><button type="button" class="btn-primary">Edit</button></a>&nbsp
                                                         <a href="#"><button type="button" class="btn-danger">Hapus</button></a>
                                                         </td>
                                                     
