--- a/pimpinan/form-add-data-dokumen.html
+++ b/pimpinan/form-add-data-dokumen.html
@@ -267,7 +267,7 @@
                                             <div class="form-group row">
                                                 <label for="example-date-input" class="col-sm-2 col-form-label">Tanggal Upload</label>
                                                 <div class="col-sm-5">
-                                                    <input class="form-control" type="text" value="" id="example-date-input">
+                                                    <input class="form-control" type="text" value="14 Oktober 2021" id="example-date-input">
                                                 </div>
                                             </div>
 
