--- a/pimpinan/surat-masuk.html
+++ b/pimpinan/surat-masuk.html
@@ -251,8 +251,6 @@
                                                                     <th>Tanggal Surat</th>
                                                                     <th>Tanggal Terima</th>
                                                                     <th>Asal Surat</th>
-                                                                    <th>Perihal</th>
-                                                                    <th>File</th>
                                                                     <th>Aksi</th>
                                                                 </tr>
                                                             </thead>
@@ -263,11 +261,10 @@
                                                                     <td>1 Oktober 2021</td>
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>Politeknik Negeri Jember</td>
-                                                                    <td>Perizinan lokasi PKL</td>
-                                                                    <td> <a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">PKL.pdf</a></td>
                                                                     <td>
                                                                     <a href="#"><button type="button" class="btn-info">Approval</button></a>&nbsp
-                                                                    <a href="#"><button type="button" class="btn-danger">Abaikan</button></a>
+                                                                    <a href="#"><button type="button" class="btn-danger">Abaikan</button></a>&nbsp
+                                                                    <a href="detail-suratmasuk.html"><button type="button" class="btn-warning">Detail</button></a>
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
@@ -276,11 +273,10 @@
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>5 Oktober 2021</td>
                                                                     <td>Tokopedia</td>
-                                                                    <td>Meeting</td>
-                                                                    <td> <a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-tokopedia.pdf</a></td>
                                                                     <td>
                                                                     <a href="#"><button type="button" class="btn-info">Approval</button></a>&nbsp
-                                                                    <a href="#"><button type="button" class="btn-danger">Abaikan</button></a>
+                                                                    <a href="#"><button type="button" class="btn-danger">Abaikan</button></a>&nbsp
+                                                                    <a href="detail-suratmasuk.html"><button type="button" class="btn-warning">Detail</button></a>
                                                                     </td>
                                                                 </tr>
                                                                 
